--- a/index.html
+++ b/index.html
@@ -895,12 +895,7 @@
 						</div>
 
 						<div class="col-lg-8 mt-5 mt-lg-0">
-							<form
-								action="forms/contact.php"
-								method="post"
-								role="form"
-								class="php-email-form"
-							>
+							<form class="php-email-form" method="POST" name="contact" netlify>
 								<div class="row">
 									<div class="col-md-6 form-group">
 										<input
@@ -944,7 +939,7 @@
 								</div>
 								<div class="my-3">
 									<div class="loading">Loading</div>
-									<div class="error-message"></div>
+									<!-- <div class="error-message"></div> -->
 									<div class="sent-message">
 										Your message has been sent. Thank you!
 									</div>
