--- a/index.html
+++ b/index.html
@@ -895,7 +895,12 @@
 						</div>
 
 						<div class="col-lg-8 mt-5 mt-lg-0">
-							<form class="php-email-form" method="POST" name="contact" netlify>
+							<form
+								class="php-email-form"
+								method="POST"
+								name="contact"
+								data-netlify="true"
+							>
 								<div class="row">
 									<div class="col-md-6 form-group">
 										<input
