--- a/index.html
+++ b/index.html
@@ -907,7 +907,6 @@
 											type="text"
 											name="name"
 											class="form-control"
-											id="name"
 											placeholder="Your Name"
 											required
 										/>
@@ -917,7 +916,6 @@
 											type="email"
 											class="form-control"
 											name="email"
-											id="email"
 											placeholder="Your Email"
 											required
 										/>
@@ -928,7 +926,6 @@
 										type="text"
 										class="form-control"
 										name="subject"
-										id="subject"
 										placeholder="Subject"
 										required
 									/>
@@ -944,6 +941,7 @@
 								</div>
 								<div class="text-center">
 									<button type="submit">Send Message</button>
+									<input type="submit" value="Send Message NOW!" />
 								</div>
 							</form>
 						</div>
