--- a/index.html
+++ b/index.html
@@ -907,6 +907,7 @@
 											type="text"
 											name="name"
 											class="form-control"
+											id="name"
 											placeholder="Your Name"
 											required
 										/>
@@ -916,6 +917,7 @@
 											type="email"
 											class="form-control"
 											name="email"
+											id="email"
 											placeholder="Your Email"
 											required
 										/>
@@ -926,6 +928,7 @@
 										type="text"
 										class="form-control"
 										name="subject"
+										id="subject"
 										placeholder="Subject"
 										required
 									/>
@@ -941,7 +944,6 @@
 								</div>
 								<div class="text-center">
 									<button type="submit">Send Message</button>
-									<input type="submit" value="Send Message NOW!" />
 								</div>
 							</form>
 						</div>
