Message ID Missing

--- a/index.html
+++ b/index.html
@@ -937,6 +937,7 @@
 									<textarea
 										class="form-control"
 										name="message"
+										id="message"
 										rows="5"
 										placeholder="Message"
 										required
