--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 							<img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
 						</div>
 						<div class="col-lg-8 pt-4 pt-lg-0 content underabout">
-							<h3>Data Analyst &amp; Web Developer.</h3>
+							<h3>Student at Vellore Institute of Technology, Vellore</h3>
 							<p class="fst-italic"></p>
 							<div class="row">
 								<div class="col-lg-6">
@@ -186,15 +186,7 @@
 									</ul>
 								</div>
 							</div>
-							<p>
-								Officiis eligendi itaque labore et dolorum mollitia officiis
-								optio vero. Quisquam sunt adipisci omnis et ut. Nulla
-								accusantium dolor incidunt officia tempore. Et eius omnis.
-								Cupiditate ut dicta maxime officiis quidem quia. Sed et
-								consectetur qui quia repellendus itaque neque. Aliquid amet
-								quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis
-								culpa magni laudantium dolores.
-							</p>
+							<p></p>
 						</div>
 					</div>
 				</div>
@@ -207,17 +199,25 @@
 					<div class="section-title">
 						<h2>Skills</h2>
 						<p>
-							Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-							ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-							quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-							Quia fugiat sit in iste officiis commodi quidem hic quas.
+							I am mostly experienced in the field of Data Science which
+							includes Analytics, Machine Learning, Artificial Intelligence and
+							Deep Learning. Apart from data science I am also skilled in the
+							field of Web Development which includes Front-End Develpment in
+							HTML,CSS,JavaScript and React. Including Back-End Development with
+							the help of Express.js, Node.js and Python. Along with this I am
+							skilled in the field of Software Development, with proficiency in
+							Programming Languages such as C,C++,Python,Java. I have also
+							worked and developed solutions on Cloud Platforms such as Google
+							Cloud and AWS.
 						</p>
 					</div>
 
 					<div class="row skills-content">
 						<div class="col-lg-6">
 							<div class="progress">
-								<span class="skill">HTML <i class="val">100%</i></span>
+								<span class="skill"
+									>Machine Learning<i class="val">100%</i></span
+								>
 								<div class="progress-bar-wrap">
 									<div
 										class="progress-bar"
@@ -230,7 +230,9 @@
 							</div>
 
 							<div class="progress">
-								<span class="skill">CSS <i class="val">90%</i></span>
+								<span class="skill"
+									>Front-End Development <i class="val">90%</i></span
+								>
 								<div class="progress-bar-wrap">
 									<div
 										class="progress-bar"
@@ -243,7 +245,7 @@
 							</div>
 
 							<div class="progress">
-								<span class="skill">JavaScript <i class="val">75%</i></span>
+								<span class="skill">Data Analytics<i class="val">75%</i></span>
 								<div class="progress-bar-wrap">
 									<div
 										class="progress-bar"
@@ -258,7 +260,7 @@
 
 						<div class="col-lg-6">
 							<div class="progress">
-								<span class="skill">PHP <i class="val">80%</i></span>
+								<span class="skill">C++ <i class="val">80%</i></span>
 								<div class="progress-bar-wrap">
 									<div
 										class="progress-bar"
@@ -271,7 +273,7 @@
 							</div>
 
 							<div class="progress">
-								<span class="skill">WordPress/CMS <i class="val">90%</i></span>
+								<span class="skill">Python <i class="val">90%</i></span>
 								<div class="progress-bar-wrap">
 									<div
 										class="progress-bar"
@@ -284,7 +286,9 @@
 							</div>
 
 							<div class="progress">
-								<span class="skill">Photoshop <i class="val">55%</i></span>
+								<span class="skill"
+									>Back-End Development<i class="val">55%</i></span
+								>
 								<div class="progress-bar-wrap">
 									<div
 										class="progress-bar"
@@ -345,10 +349,7 @@
 					<div class="section-title">
 						<h2>Portfolio</h2>
 						<p>
-							Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-							ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-							quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-							Quia fugiat sit in iste officiis commodi quidem hic quas.
+							Here are some of the interesting projects that I have worked on
 						</p>
 					</div>
 
@@ -651,12 +652,7 @@
 				<div class="container" data-aos="fade-up">
 					<div class="section-title">
 						<h2>Explore</h2>
-						<p>
-							Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-							ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-							quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-							Quia fugiat sit in iste officiis commodi quidem hic quas.
-						</p>
+						<p>Well, there is more to look at over here!</p>
 					</div>
 
 					<div class="row">
@@ -667,22 +663,26 @@
 						>
 							<div class="icon-box iconbox-yellow">
 								<div class="icon">
-									<svg
-										width="100"
-										height="100"
-										viewBox="0 0 600 600"
-										xmlns="http://www.w3.org/2000/svg"
-									>
-										<path
-											stroke="none"
-											stroke-width="0"
-											fill="#f5f5f5"
-											d="M300,503.46388370962813C374.79870501325706,506.71871716319447,464.8034551963731,527.1746412648533,510.4981551193396,467.86667711651364C555.9287308511215,408.9015244558933,512.6030010748507,327.5744911775523,490.211057578863,256.5855673507754C471.097692560561,195.9906835881958,447.69079081568157,138.11976852964426,395.19560036434837,102.3242989838813C329.3053358748298,57.3949838291264,248.02791733380457,8.279543830951368,175.87071277845988,42.242879143198664C103.41431057327972,76.34704239035025,93.79494320519305,170.9812938413882,81.28167332365135,250.07896920659033C70.17666984294237,320.27484674793965,64.84698225790005,396.69656628748305,111.28512138212992,450.4950937839243C156.20124167950087,502.5303643271138,231.32542653798444,500.4755392045468,300,503.46388370962813"
-										></path>
-									</svg>
-									<i class="bx bx-chat"></i>
+									<a href="comingsoon_04/comingsoon_04/index.html">
+										<svg
+											width="100"
+											height="100"
+											viewBox="0 0 600 600"
+											xmlns="http://www.w3.org/2000/svg"
+										>
+											<path
+												stroke="none"
+												stroke-width="0"
+												fill="#f5f5f5"
+												d="M300,503.46388370962813C374.79870501325706,506.71871716319447,464.8034551963731,527.1746412648533,510.4981551193396,467.86667711651364C555.9287308511215,408.9015244558933,512.6030010748507,327.5744911775523,490.211057578863,256.5855673507754C471.097692560561,195.9906835881958,447.69079081568157,138.11976852964426,395.19560036434837,102.3242989838813C329.3053358748298,57.3949838291264,248.02791733380457,8.279543830951368,175.87071277845988,42.242879143198664C103.41431057327972,76.34704239035025,93.79494320519305,170.9812938413882,81.28167332365135,250.07896920659033C70.17666984294237,320.27484674793965,64.84698225790005,396.69656628748305,111.28512138212992,450.4950937839243C156.20124167950087,502.5303643271138,231.32542653798444,500.4755392045468,300,503.46388370962813"
+											></path>
+										</svg>
+										<i class="bx bx-chat"></i
+									></a>
 								</div>
-								<h4><a href="">Blogs</a></h4>
+								<h4>
+									<a href="comingsoon_04/comingsoon_04/index.html">Blogs</a>
+								</h4>
 								<p>
 									At vero eos et accusamus et iusto odio dignissimos ducimus qui
 									blanditiis
@@ -697,25 +697,34 @@
 						>
 							<div class="icon-box iconbox-red">
 								<div class="icon">
-									<svg
-										width="100"
-										height="100"
-										viewBox="0 0 600 600"
-										xmlns="http://www.w3.org/2000/svg"
+									<a
+										href="https://www.youtube.com/channel/UCFkF13Lu-9MAWUZjmcU86tQ"
 									>
-										<path
-											stroke="none"
-											stroke-width="0"
-											fill="#f5f5f5"
-											d="M300,532.3542879108572C369.38199826031484,532.3153073249985,429.10787420159085,491.63046689027357,474.5244479745417,439.17860296908856C522.8885846962883,383.3225815378663,569.1668002868075,314.3205725914397,550.7432151929288,242.7694973846089C532.6665558377875,172.5657663291529,456.2379748765914,142.6223662098291,390.3689995646985,112.34683881706744C326.66090330228417,83.06452184765237,258.84405631176094,53.51806209861945,193.32584062364296,78.48882559362697C121.61183558270385,105.82097193414197,62.805066853699245,167.19869350419734,48.57481801355237,242.6138429142374C34.843463184063346,315.3850353017275,76.69343916112496,383.4422959591041,125.22947124332185,439.3748458443577C170.7312796277747,491.8107796887764,230.57421082200815,532.3932930995766,300,532.3542879108572"
-										></path>
-									</svg>
-									<i class="bx bxl-youtube"></i>
+										<svg
+											width="100"
+											height="100"
+											viewBox="0 0 600 600"
+											xmlns="http://www.w3.org/2000/svg"
+										>
+											<path
+												stroke="none"
+												stroke-width="0"
+												fill="#f5f5f5"
+												d="M300,532.3542879108572C369.38199826031484,532.3153073249985,429.10787420159085,491.63046689027357,474.5244479745417,439.17860296908856C522.8885846962883,383.3225815378663,569.1668002868075,314.3205725914397,550.7432151929288,242.7694973846089C532.6665558377875,172.5657663291529,456.2379748765914,142.6223662098291,390.3689995646985,112.34683881706744C326.66090330228417,83.06452184765237,258.84405631176094,53.51806209861945,193.32584062364296,78.48882559362697C121.61183558270385,105.82097193414197,62.805066853699245,167.19869350419734,48.57481801355237,242.6138429142374C34.843463184063346,315.3850353017275,76.69343916112496,383.4422959591041,125.22947124332185,439.3748458443577C170.7312796277747,491.8107796887764,230.57421082200815,532.3932930995766,300,532.3542879108572"
+											></path>
+										</svg>
+										<i class="bx bxl-youtube"></i
+									></a>
 								</div>
-								<h4><a href="">Youtube Channel</a></h4>
+								<h4>
+									<a
+										href="https://www.youtube.com/channel/UCFkF13Lu-9MAWUZjmcU86tQ"
+										>Youtube Channel</a
+									>
+								</h4>
 								<p>
-									Quis consequatur saepe eligendi voluptatem consequatur dolor
-									consequuntur
+									Creating Vlogs, Gaming and Technology Related Content on
+									Youtube, Check it out on the Link above.
 								</p>
 							</div>
 						</div>
@@ -727,25 +736,27 @@
 						>
 							<div class="icon-box iconbox-teal">
 								<div class="icon">
-									<svg
-										width="100"
-										height="100"
-										viewBox="0 0 600 600"
-										xmlns="http://www.w3.org/2000/svg"
-									>
-										<path
-											stroke="none"
-											stroke-width="0"
-											fill="#f5f5f5"
-											d="M300,566.797414625762C385.7384707136149,576.1784315230908,478.7894351017131,552.8928747891023,531.9192734346935,484.94944893311C584.6109503024035,417.5663521118492,582.489472248146,322.67544863468447,553.9536738515405,242.03673114598146C529.1557734026468,171.96086150256528,465.24506316201064,127.66468636344209,395.9583748389544,100.7403814666027C334.2173773831606,76.7482773500951,269.4350130405921,84.62216499799875,207.1952322260088,107.2889140133804C132.92018162631612,134.33871894543012,41.79353780512637,160.00259165414826,22.644507872594943,236.69541883565114C3.319112789854554,314.0945973066697,72.72355303640163,379.243833228382,124.04198916343866,440.3218312028393C172.9286146004772,498.5055451809895,224.45579914871206,558.5317968840102,300,566.797414625762"
-										></path>
-									</svg>
-									<i class="bx bxl-stack-overflow"></i>
+									<a href="/comingsoon_04/comingsoon_04/index.html">
+										<svg
+											width="100"
+											height="100"
+											viewBox="0 0 600 600"
+											xmlns="http://www.w3.org/2000/svg"
+										>
+											<path
+												stroke="none"
+												stroke-width="0"
+												fill="#f5f5f5"
+												d="M300,566.797414625762C385.7384707136149,576.1784315230908,478.7894351017131,552.8928747891023,531.9192734346935,484.94944893311C584.6109503024035,417.5663521118492,582.489472248146,322.67544863468447,553.9536738515405,242.03673114598146C529.1557734026468,171.96086150256528,465.24506316201064,127.66468636344209,395.9583748389544,100.7403814666027C334.2173773831606,76.7482773500951,269.4350130405921,84.62216499799875,207.1952322260088,107.2889140133804C132.92018162631612,134.33871894543012,41.79353780512637,160.00259165414826,22.644507872594943,236.69541883565114C3.319112789854554,314.0945973066697,72.72355303640163,379.243833228382,124.04198916343866,440.3218312028393C172.9286146004772,498.5055451809895,224.45579914871206,558.5317968840102,300,566.797414625762"
+											></path>
+										</svg>
+										<i class="bx bxl-stack-overflow"></i
+									></a>
 								</div>
 								<h4><a href="">Projects</a></h4>
 								<p>
-									Modi nostrum vel laborum. Porro fugit error sit minus sapiente
-									sit aspernatur
+									Here are all my projects that I have worked on, make sure to
+									have a look and have some fun.
 								</p>
 							</div>
 						</div>
