--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
 						>
 							<div class="icon-box iconbox-yellow">
 								<div class="icon">
-									<a href="comingsoon_04/comingsoon_04/index.html">
+									<a href="/WIP/main.html">
 										<svg
 											width="100"
 											height="100"
@@ -681,7 +681,7 @@
 									></a>
 								</div>
 								<h4>
-									<a href="comingsoon_04/comingsoon_04/index.html">Blogs</a>
+									<a href="/WIP/main.html">Blogs</a>
 								</h4>
 								<p>
 									At vero eos et accusamus et iusto odio dignissimos ducimus qui
@@ -736,7 +736,7 @@
 						>
 							<div class="icon-box iconbox-teal">
 								<div class="icon">
-									<a href="/comingsoon_04/comingsoon_04/index.html">
+									<a href="/WIP/main.html">
 										<svg
 											width="100"
 											height="100"
