--- a/index.html
+++ b/index.html
@@ -684,8 +684,8 @@
 									<a href="/WIP/main.html">Blogs</a>
 								</h4>
 								<p>
-									At vero eos et accusamus et iusto odio dignissimos ducimus qui
-									blanditiis
+									Check out some interesting and fun posts on technology,
+									science, life, gaming and memes here!
 								</p>
 							</div>
 						</div>
