Updated Resume Links Coming Soon Page

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 
 		<main id="main">
 			<!-- ======= About Section ======= -->
-			<section id="about" class="about">
-				<div class="container" data-aos="fade-up">
-					<div class="section-title">
+			<section id="about" class="about text-justify">
+				<div class="container text-justify" data-aos="fade-up">
+					<div class="section-title text-justify">
 						<h2>About</h2>
 						<p class="text-justify">
 							Hi ! , Welcome to my Portfolio Website I am Aaryan Bhatia Ghosh
@@ -317,7 +317,7 @@
 							<div class="icon-box iconbox-pink">
 								<div class="icon">
 									<a
-										href="AARYAN_RESUME_3.0.pdf"
+										href="AARYAN_RESUME_5.0.pdf"
 										download="Aaryan Bhatia Ghosh's Resume"
 									>
 										<svg
