--- a/WIP/main.html
+++ b/WIP/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Coming Soon 4</title>
+		<title>Coming Soon..</title>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--===============================================================================================-->
@@ -45,7 +45,7 @@
 			<div class="flex-col-c p-t-50 p-b-50">
 				<h3 class="l1-txt1 txt-center p-b-10">Coming Soon</h3>
 
-				<p class="txt-center l1-txt2 p-b-60">02.02.2023</p>
+				<p class="txt-center l1-txt2 p-b-60">SUMMER 2023</p>
 			</div>
 
 			<span class="s1-txt3 txt-center"> @2023 METALXRAY </span>
